fix: downgrade to jdk8 language